# Cpp_Adv_lab2

./: README.md  calc.chm
calc/: CMakeLists.txt  calc.cpp  calc.h  getResult.h  loader.cpp  loader.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h
calc/include/: token.h
calc_dlls/: CMakeLists.txt  base.cpp  pow.cpp  sin_cos.cpp
calc_dlls/include/: operation.h  variable.h
